src/test/deca/context/valid/sansObjet/InitializationCopilationWithInt.deca
{
    int x  = 0 ;
    int y = x;
    int z = y;
    int w = 20;
    int I = x;
}