src/test/deca/context/invalid/sansObjet/BadAdditionWithBoolean.deca
{
    boolean x = true;
    boolean y = false;
    boolean z;
    z = x+y;
}